# Kai-desktop-assistant

./: .gitignore  README.md
kai-core/: CMakeLists.txt  main.cpp  package-lock.json  package.json
kai-core/capture/: audio.cpp  audio.hpp  screen.cpp  screen.hpp
kai-core/model/: kai_intent_classifier.py  model.cpp  model.hpp  stream-gpt.js
kai-core/tts/: package-lock.json  package.json  speak-stream.js  speak.js
kai-core/ui/: overlay.cpp  overlay.hpp
kai-overlay/: package-lock.json  package.json
kai-overlay/src/: index.html  main.js
kai-overlay/src-tauri/: Cargo.toml  tauri.conf.json
kai-overlay/src-tauri/src/: main.rs
